; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_push_dropdown_setting_core_options_item.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_push_dropdown_setting_core_options_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_CTL_CORE_OPTIONS_LIST_GET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i64, i64)* @action_ok_push_dropdown_setting_core_options_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_ok_push_dropdown_setting_core_options_item(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  store i32* null, i32** %12, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call i64 @atoi(i8* %14)
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %13, align 4
  %17 = load i32, i32* @RARCH_CTL_CORE_OPTIONS_LIST_GET, align 4
  %18 = call i32 @rarch_ctl(i32 %17, i32** %12)
  %19 = load i32*, i32** %12, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %28

22:                                               ; preds = %5
  %23 = load i32*, i32** %12, align 8
  %24 = load i32, i32* %13, align 4
  %25 = load i64, i64* %10, align 8
  %26 = call i32 @core_option_manager_set_val(i32* %23, i32 %24, i64 %25)
  %27 = call i32 @action_cancel_pop_default(i32* null, i32* null, i32 0, i32 0)
  store i32 %27, i32* %6, align 4
  br label %28

28:                                               ; preds = %22, %21
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local i64 @atoi(i8*) #1

declare dso_local i32 @rarch_ctl(i32, i32**) #1

declare dso_local i32 @core_option_manager_set_val(i32*, i32, i64) #1

declare dso_local i32 @action_cancel_pop_default(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
